fixed mobile bug, added support for wrapping tags

--- a/src/components/ExecutivePositionPreview.css
+++ b/src/components/ExecutivePositionPreview.css
@@ -23,3 +23,8 @@
     text-wrap: wrap;
     margin-bottom: 0.1em;
 }
+
+.disabled-link {
+    pointer-events: none;
+    cursor: default;
+}
